styles/main.css
@charset "UTF-8";
@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Abril+Fatface|Open+Sans:400,600,700,800');
/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
html {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}
article,
aside,
footer,
header,
nav,
section {
  display: block;
}
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}
figcaption,
figure,
main {
  display: block;
}
figure {
  margin: 1em 40px;
}
hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}
pre {
  font-family: monospace, monospace;
  font-size: 1em;
}
a {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
}
abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}
b,
strong {
  font-weight: inherit;
  font-weight: bolder;
}
code,
kbd,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
dfn {
  font-style: italic;
}
mark {
  background-color: #ff0;
  color: #000;
}
small {
  font-size: 80%;
}
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sub {
  bottom: -0.25em;
}
sup {
  top: -0.5em;
}
audio,
video {
  display: inline-block;
}
audio:not([controls]) {
  display: none;
  height: 0;
}
img {
  border-style: none;
}
svg:not(:root) {
  overflow: hidden;
}
button,
input,
optgroup,
select,
textarea {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}
button,
input {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
[type='reset'],
[type='submit'],
button,
html [type='button'] {
  -webkit-appearance: button;
}
[type='button']::-moz-focus-inner,
[type='reset']::-moz-focus-inner,
[type='submit']::-moz-focus-inner,
button::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
[type='button']:-moz-focusring,
[type='reset']:-moz-focusring,
[type='submit']:-moz-focusring,
button:-moz-focusring {
  outline: 1px dotted ButtonText;
}
fieldset {
  padding: 0.35em 0.75em 0.625em;
}
legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}
progress {
  display: inline-block;
  vertical-align: baseline;
}
textarea {
  overflow: auto;
}
[type='checkbox'],
[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}
[type='number']::-webkit-inner-spin-button,
[type='number']::-webkit-outer-spin-button {
  height: auto;
}
[type='search'] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}
[type='search']::-webkit-search-cancel-button,
[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
details,
menu {
  display: block;
}
summary {
  display: list-item;
}
canvas {
  display: inline-block;
}
[hidden],
template {
  display: none;
}
.u-holder {
  position: relative;
}
.u-holder > .u-title {
  padding-left: 2px;
  font-family: Playfair Display, sans-serif;
  letter-spacing: 0.07em;
  font-size: 20px;
  font-weight: 400;
  top: -4px;
  background: transparent;
}
.u-title {
  margin: 0;
  line-height: 1.3;
  text-transform: uppercase;
  font-family: Open Sans, sans-serif;
  font-weight: 600;
  font-size: 11px;
  letter-spacing: 0.03em;
  display: inline-block;
  position: relative;
  padding: 0 1px;
}
@media (min-width: 480px) {
  .u-2col {
    -webkit-column-count: 2;
    column-count: 2;
    -webkit-column-gap: 30px;
    column-gap: 30px;
  }

  .u-3col {
    -webkit-column-count: 2;
    column-count: 2;
    -webkit-column-gap: 30px;
    column-gap: 30px;
  }
}
@media (min-width: 1137px) {
  .u-3col {
    -webkit-column-count: 3;
    column-count: 3;
    -webkit-column-gap: 30px;
    column-gap: 30px;
  }

  .u-3col p {
    max-width: 1080px;
  }
}
.u-nosplit {
  display: inline-block;
}
.u-width1 {
  width: 69px;
}
.u-width2 {
  width: 101px;
}
.u-width3 {
  width: 59px;
}
.u-width4 {
  width: 88px;
}
.u-width5 {
  width: 70px;
}
.u-width6 {
  width: 116px;
}
.u-width7 {
  width: 62px;
}
.u-width8 {
  width: 54px;
}
.u-width9 {
  width: 85px;
}
html {
  overflow-x: hidden;
}
body {
  font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
  color: rgba(0, 0, 0, 0.87);
  margin: 0;
  background-color: #fff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
  counter-reset: a;
  padding: 49px 12px 0;
}
@media (min-width: 1530px) {
  body {
    padding: 91px 40px 0;
  }
}
@media (min-width: 1886px) {
  body {
    padding-top: 87px;
  }
  body > div:not(.ro-Grid--rows),
  body > section {
    max-width: 1823px;
    margin: 0 auto;
  }
}
a,
a:active,
a:focus {
  color: rgba(26, 13, 171, 0.87);
  text-decoration: none;
  outline: 0;
  border-bottom: 1px solid;
}
@media (min-width: 1886px) {
  a,
  a:active,
  a:focus {
    border-bottom: none;
  }
}
a:hover {
  color: #1a0dab;
}
.ro-Hero-header {
  max-width: 298px;
}
@media (min-width: 480px) {
  .ro-Hero-header {
    max-width: none;
  }
}
@-webkit-keyframes moveIn {
  0% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  to {
    -webkit-transform: translateY(3px);
    transform: translateY(3px);
  }
}
@keyframes moveIn {
  0% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  to {
    -webkit-transform: translateY(3px);
    transform: translateY(3px);
  }
}
.ro-Hero-title {
  top: -37px;
  text-transform: none;
  color: #ff91af;
}
.ro-Hero-heading {
  font-family: Abril Fatface, cursive;
  font-size: 57px;
  letter-spacing: 0.01em;
  font-weight: 400;
  margin: 0;
  line-height: 53px;
  padding-bottom: 2px;
}
@media (min-width: 480px) {
  .ro-Hero-heading {
    padding-bottom: 0;
  }
}
@media (min-width: 1886px) {
  .ro-Hero-heading {
    line-height: 1.1;
  }
}
/* ... */

